<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visibi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    tools:context="protect.babysleepsounds.MainActivity">


    <!--    <TextView-->
    <!--        android:id="@+id/sound_label"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20.0dip"-->
    <!--        android:layout_marginTop="20.0dip"-->
    <!--        android:layout_marginEnd="20.0dip"-->
    <!--        android:labelFor="@+id/budgetSpinner"-->
    <!--        android:text="@string/sound"-->
    <!--        android:textSize="16.0sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/description" />-->

    <!--    <GridView-->
    <!--        android:id="@+id/soundGridView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:numColumns="3"-->
    <!--        android:columnWidth="100dp"-->
    <!--        android:verticalSpacing="10dp"-->
    <!--        android:horizontalSpacing="10dp"-->
    <!--        android:stretchMode="columnWidth"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/sound_label"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/sound_label"/>-->

    <!--    <Spinner-->
    <!--        android:id="@+id/soundSpinner"-->
    <!--        android:layout_width="343dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:drawSelectorOnTop="true"-->
    <!--        android:spinnerMode="dropdown"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/sound_label"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@id/sound_label"-->
    <!--        app:layout_constraintTop_toTopOf="@id/sound_label" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridView
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:choiceMode="singleChoice"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:numColumns="3"
        android:padding="8dp"
        android:verticalSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recentlyadded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sleep_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@+id/sleepTimerSpinner"
        android:text="@string/sleepTimer"
        android:textSize="16.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.941" />

    <Spinner
        android:id="@+id/sleepTimerSpinner"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/sleep_timer_label"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/playingSound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sleepTimerSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/recentlyadded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/recentlyadded"
        app:layout_constraintBottom_toTopOf="@+id/gridView_ajoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <GridView
        android:id="@+id/gridView_ajoute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fleshImg"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toTopOf="@+id/gridView_ajoute"
        app:layout_constraintStart_toEndOf="@+id/recentlyadded"
        app:layout_constraintTop_toBottomOf="@+id/gridView"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gif"
        app:layout_constraintBottom_toBottomOf="@+id/sleepTimerSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sleepTimerSpinner"
        app:layout_constraintTop_toTopOf="@+id/sleepTimerSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>

