<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Dream Calm</string>
    <string name="description">Select sound and click play</string>
    <string name="sound">Sound</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>

    <string name="sleepTimer">Sleep Timer</string>
    <string name="disabled">Disabled</string>
    <string name="time_1minute">1 Minute</string>
    <string name="time_5minute">5 Minutes</string>
    <string name="time_10minute">10 Minutes</string>
    <string name="time_30minute">30 Minutes</string>
    <string name="time_1hour">1 Hour</string>
    <string name="time_2hour">2 Hours</string>
    <string name="time_4hour">4 Hours</string>
    <string name="time_8hour">8 Hours</string>

    <string name="campfire">Campfire</string>
    <string name="dryer">Dryer</string>
    <string name="fan">Fan</string>
    <string name="ocean">Ocean</string>
    <string name="rain">Rain</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="shhhh">Shhhh</string>
    <string name="shower">Shower</string>
    <string name="stream">Stream</string>
    <string name="vacuum">Vacuum</string>
    <string name="water">Water</string>
    <string name="waterfall">Waterfall</string>
    <string name="waves">Waves</string>
    <string name="whiteNoise">White Noise</string>
    <string name="saveRec">Save file</string>
    <string name="bluetoothnot">Bluetooth is not supported on this device</string>

    <string name="preparing">Preparing</string>
    <string name="enableLowPassFilter">Low Pass Filter</string>
    <string name="filterCutoff">Filter cutoff</string>
    <string name="filterCutoffValue"><xliff:g id="frequency">%d</xliff:g> Hz</string>
    <string name="playbackNotSupported">Playback now supported, see logs for details</string>
    <string name="playbackFailure">Unable to play file, see logs for details</string>
    <string name="sleepTimerUpdated">Updated sleep timer</string>
    <string name="recorded">Recorded a sound</string>
    <string name="deleteDescription">"Are you sure you want to delete this sound?"</string>
    <string name="theme">Theme</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="notificationPlaying">Playing</string>
    <string name="please">"Please enter a name"</string>
    <string name="cancel">Cancel</string>
    <string name="notificationChannelName">Baby Sleep Sounds Audio Service</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="choose_action">Choose Action</string>
    <string name="delete">Delete</string>
    <string name="sound_deleted">Sound Deleted</string>
    <string name="rename">Rename</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="sound_renamed">Sound Renamed</string>
    <string name="about">About</string>
    <string name="app_copyright_fmt">Copyright 2023-<xliff:g>%d</xliff:g> Narges and Elie</string>
    <string name="app_license">Licensed under the GPLv3.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: 1.0.0</string>
    <string name="about_description">Dream Calm is a gentle companion for babies, offering a curated selection of calming sounds and images to aid in peaceful sleep. Inspired by Branden Archer\'s "Baby Sleep Sounds," our app aims to create a soothing environment conducive to relaxation and tranquility for your little one.</string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="sound_resources"><xliff:g id="app_name">%s</xliff:g> uses sound resources from: <xliff:g id="sound_sources_list">%s</xliff:g></string>
    <string name="image_resources"><xliff:g id="app_name">%s</xliff:g> uses image resources from: <xliff:g id="sound_sources_list">%s</xliff:g></string>
    <string name="app_libraries"><xliff:g id="app_name">%s</xliff:g> uses the following third-party libraries or programs: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="customize">Customize</string>
    <string name="settings">Settings</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="howToDelete">How to delete an added Sound</string>
    <string name="how_to_delete_sound_content">To delete an added sound, please follow these steps:\n\n1. Long press on the sound you wish to delete.\n2. A dialog box will appear to ask for confirmation.\n3. Press \"Yes\" to confirm deletion or \"No\" to cancel.\n4. The sound will be permanently removed from the list.\n\nPlease note that deleted sounds cannot be recovered, so ensure you want to delete the sound before confirming.</string>
    <string name="recentlyadded">Added sounds:</string>
    <string name="descriptionRecording">Record a sound</string>
    <string name="descriptionUploading">Upload a sound</string>
    <string name="saveFile">Save</string>
    <string name="playSound">Play</string>
    <string name="isRecordingText">Recording…</string>
    <string name="boutonAppuyer">Apply</string>
    <string name="action_add_own">Add your own</string>
</resources>
