<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/widget_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight"
        tools:layout_editor_absoluteY="56dp">

        <FrameLayout
            android:id="@+id/settings_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundLight"
            tools:layout_editor_absoluteY="204dp">

        </FrameLayout>

        <Button
            android:id="@+id/boutonAppuyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="appuyerSurBoutonAppliquer"
            android:text="@string/boutonAppuyer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_wrapper" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

